--- a/src/loading/asset/index.scss
+++ b/src/loading/asset/index.scss
@@ -5,12 +5,13 @@
     position: absolute;
     z-index: 4;
 }
-.lego-loading:before{
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    content: "";
-}
+// .lego-loading:before{
+//     display: inline-block;
+//     height: 100%;
+//     width: 0;
+//     vertical-align: middle;
+//     content: "";
+// }
 .lego-spin-text {
     text-align: center;
     position: absolute;
@@ -30,6 +31,10 @@
     line-height: 60px;
     width: 60px;
     height: 60px;
+    margin: 0 auto; /*水平居中*/
+    position: relative; /*脱离文档流*/
+    top: 50%; /*偏移*/
+    transform: translateY(-50%);
 }
 .lego-spin{
     -webkit-animation: spin 1.5s infinite linear;
