--- a/src/nodata/asset/index.scss
+++ b/src/nodata/asset/index.scss
@@ -5,12 +5,13 @@
     position: absolute;
     z-index: 4;
 }
-.lego-nodata:before{
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
-    content: "";
-}
+// .lego-nodata:before{
+//     display: inline-block;
+//     height: 100%;
+//     width: 0;
+//     vertical-align: middle;
+//     content: "";
+// }
 .lego-tip-text {
     text-align: center;
     position: absolute;
@@ -28,6 +29,10 @@
     font-size: 32px;
     line-height: 60px;
     height: 60px;
+    margin: 0 auto; /*水平居中*/
+    position: relative; /*脱离文档流*/
+    top: 50%; /*偏移*/
+    transform: translateY(-50%);
 }
 
 .lego-icon-sm {
