--- a/src/selects/asset/index.scss
+++ b/src/selects/asset/index.scss
@@ -6,7 +6,7 @@
     position: absolute;
     top: 50%;
     right: 10px;
-    display: inline-block;
+    display: inline-block !important;
     width: 0;
     height: 0;
     margin-left: 0.3em;
