--- a/src/modal/asset/index.scss
+++ b/src/modal/asset/index.scss
@@ -1,87 +1,84 @@
 .modal-backdrop {
+    z-index: 9998 !important;
     background-color: #000;
     bottom: 0;
     position: fixed;
+    &.in{
+        opacity: 0.4;
+    }
 }
-
-.modal-backdrop.in {
-    opacity: 0.4;
-}
-
-.modal-backdrop {
-    z-index: 9998 !important;
-}
-
-.modal,
-.modal-dialog {
+.modal {
     z-index: 9999 !important;
-}
-.modal-header {
-    padding: 10px 10px 10px 15px;
-    .close{
-        margin-top:3px;
-    }
-    h5{
-        color: #666;
-        font-size: 16px;
-    }
-}
-
-.right-modal {
-    z-index: 10 !important;
-    top: 60px;
-}
-#lego-modal .modal-dialog{
-    max-width: 600px;
-}
-.modal-content {
-    border: none;
-    box-shadow: 0 2px 10px rgba(0,0,0,.3);
-}
-
-.modal-footer {
-    border-top: none;
-    button{
-        margin-right:10px;
-        &:last-child{
-            margin-right: 0px;
+    .modal-dialog {
+        z-index: 9999 !important;
+        .modal-content {
+            border: none;
+            box-shadow: 0 2px 10px rgba(0,0,0,.3);
+            .modal-header {
+                padding: 10px 10px 10px 15px;
+                .close{
+                    margin-top:3px;
+                }
+                h5{
+                    color: #666;
+                    font-size: 16px;
+                }
+            }
+            .modal-body {
+                padding: 15px 15px 0 15px;
+            }
+            .modal-footer {
+                border-top: none;
+                button{
+                    margin-right:10px;
+                    &:last-child{
+                        margin-right: 0px;
+                    }
+                }
+            }
         }
     }
-}
-
-.right-modal{
-    .modal-header{
-        padding: 16px;
+    &#lego-modal{
+        .modal-dialog{
+            max-width: 600px;
+        }
     }
-    .modal-dialog {
-        width: 700px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        height: '100%';
-        margin: 0;
-    }
-    .modal-content {
-        height: 100%;
-        border-radius: 0;
-        border: none;
-        background-color: #fff;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
-    }
-    .modal-body {
-        position: absolute !important;
+    &.right-modal{
+        z-index: 10 !important;
         top: 60px;
-        bottom: 65px;
-        width: 100%;
-        overflow-y: auto;
-    }
-    .modal-footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        > div{
-            text-align: center;
+        .modal-header{
+            padding: 16px;
+        }
+        .modal-dialog {
+            width: 700px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            height: '100%';
+            margin: 0;
+        }
+        .modal-content {
+            height: 100%;
+            border-radius: 0;
+            border: none;
+            background-color: #fff;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
+        }
+        .modal-body {
+            position: absolute !important;
+            top: 60px;
+            bottom: 65px;
+            width: 100%;
+            overflow-y: auto;
+        }
+        .modal-footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            > div{
+                text-align: center;
+            }
         }
     }
 }
