--- a/src/pagination/asset/index.scss
+++ b/src/pagination/asset/index.scss
@@ -205,8 +205,9 @@
 
 .lego-pagination .pageJump {
     width: 50px;
-    height: 26px;
+    height: 30px;
     display: inline-block;
+    vertical-align: middle;
     padding: 0;
     text-align: center;
 }
