--- a/src/chkgroup/asset/index.scss
+++ b/src/chkgroup/asset/index.scss
@@ -1,3 +1,4 @@
+@import "../../../asset/scss/bootstrap/variables";
 .lego-chkgroup {
     .form-check-label{
         padding-left: 0;
@@ -93,10 +94,10 @@
     height: 8px;
     margin-top: -4px;
     border-radius: 50%;
-    background: #3e97eb;
+    background: $brand-primary;
 }
 .lego-radio:checked + span:before {
-    border: 1px solid #3e97eb;
+    border: 1px solid $brand-primary;
 }
 .lego-radio:checked[disabled] + span:before {
     border: 1px solid #c9e2f9;
@@ -121,8 +122,8 @@
     border-left: 0;
 }
 .lego-checkbox:checked + span:before {
-    border: #3e97eb;
-    background: #3e97eb;
+    border: $brand-primary;
+    background: $brand-primary;
 }
 .lego-checkbox:checked[disabled] + span:before {
     border: #c9e2f9;
