--- a/src/slider/asset/index.scss
+++ b/src/slider/asset/index.scss
@@ -1,4 +1,51 @@
+@import "../../../asset/scss/bootstrap/variables";
 .lego-slider {
     display: inline-block;
     vertical-align: middle;
+    .slider-track {
+        background-color: #e9e9e9;
+        background-image: none;
+        filter: none;
+        box-shadow: none;
+    }
+    .slider-selection {
+        background-color: $brand-primary;
+        background-image: none;
+        filter: none;
+        box-shadow: none;
+    }
+    .slider.slider-horizontal .slider-track {
+        height: 4px;
+    }
+    .slider-handle {
+        margin-left: -7px;
+        margin-top: 0;
+        width: 14px;
+        height: 14px;
+        cursor: pointer;
+        border-radius: 50%;
+        border: 2px solid $brand-primary;
+        background-color: #fff;
+        background-image: none;
+        filter: none;
+        box-shadow: inset 0 1px 0 hsla(0,0%,100%,.2), 0 1px 2px rgba(0,0,0,.05);
+    }
+    .slider.slider-horizontal .slider-handle,
+    .slider.slider-horizontal .slider-tick {
+        margin-left: -7px;
+    }
+    .tooltip-arrow {
+        position: absolute;
+        width: 0;
+        height: 0;
+        border-color: transparent;
+        border-style: solid;
+    }
+    .tooltip.top .tooltip-arrow {
+        bottom: -5px;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px 5px 0;
+        border-top-color: #000;
+    }
 }
