--- a/asset/scss/bootstrap/_forms.scss
+++ b/asset/scss/bootstrap/_forms.scss
@@ -97,6 +97,7 @@ select.form-control {
 .col-form-label {
   padding-top: $input-padding-y;
   padding-bottom: $input-padding-y;
+  padding-right: 0;
   margin-bottom: 0; // Override the `<label>` default
 }
 
