--- a/asset/scss/bootstrap/_modal.scss
+++ b/asset/scss/bootstrap/_modal.scss
@@ -31,7 +31,9 @@
     transition: transform .3s ease-out;
     transform: translate(0, -25%);
   }
-  &.in .modal-dialog { transform: translate(0, 0); }
+  &.in .modal-dialog {
+    //   transform: translate(0, 0);
+  }
 }
 .modal-open .modal {
   overflow-x: hidden;
