--- a/src/popover/asset/index.scss
+++ b/src/popover/asset/index.scss
@@ -2,4 +2,7 @@
 	border-color: #ccc;
 	max-width: 250px;
     box-shadow: 0 2px 4px rgba(0,0,0,.2);
+	&:after{
+		border-bottom-color: #fff !important;
+	}
 }
