--- a/asset/scss/bootstrap/_tables.scss
+++ b/asset/scss/bootstrap/_tables.scss
@@ -11,16 +11,16 @@
   td {
     padding: $table-cell-padding;
     vertical-align: top;
-    border-top: $table-border-width solid $table-border-color;
+    border-bottom: $table-border-width solid $table-border-color;
   }
 
   thead th {
     vertical-align: bottom;
-    border-bottom: (2 * $table-border-width) solid $table-border-color;
+    border-bottom: (1 * $table-border-width) solid $table-border-color;
   }
 
   tbody + tbody {
-    border-top: (2 * $table-border-width) solid $table-border-color;
+    border-top: (1 * $table-border-width) solid $table-border-color;
   }
 
   .table {
@@ -56,7 +56,7 @@
   thead {
     th,
     td {
-      border-bottom-width: (2 * $table-border-width);
+      border-bottom-width: (1 * $table-border-width);
     }
   }
 }
