--- a/src/tables/asset/index.scss
+++ b/src/tables/asset/index.scss
@@ -242,6 +242,7 @@
             }
             th{
                 height: 49px;
+                padding: 10px 8px;
                 background: #fff;
                 vertical-align: middle;
                 border-top: 2px #ece4e4 solid;
