--- a/src/dropdown/asset/index.scss
+++ b/src/dropdown/asset/index.scss
@@ -16,14 +16,14 @@
     float: left;
     min-width: 160px;
     padding: 5px 0;
-    margin: 0;
+    margin: 2px 0;
     list-style: none;
     font-size: 14px;
     text-align: left;
     border-radius: 4px;
     border-color: #ccc;
-    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     background-clip: padding-box;
 }
 div.dropdown-menu > ul{
