--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -1,65 +1,61 @@
-.lego-search input,
-.lego-search input:focus {
-    height: 36px;
-    padding: 7px 12px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-.lego-search.input-group-sm input,
-.lego-search.input-group-sm input:focus {
-    height: auto;
-    padding: .25rem .5rem;
-    font-size: .875rem;
-    border-radius: .2rem;
-}
-.lego-search .lego-search-button {
-    padding: 7px 12px;
-    // background: #f3f3f3;
-    border: 1px solid #ddd;
-    background: #fff;
-    border-left: none;
-    border-radius: 4px;
-}
-
-.lego-search .lego-search-button i {
-    color: #999;
-}
-
-.lego-search .lego-search-button:hover i {
-    color: #0275d8;
-}
-
-.lego-search .dropdown-toggle {
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    max-width: 120px;
-    padding: 7px 10px;
-    // margin-right: -2px !important;
-    border: 1px solid #ddd;
-}
-
-.lego-search.input-group .lego-search-input {
-    border-right: none;
-}
-
-.lego-search .input-group-btn{
-    width: 1% !important;
-}
-.lego-search.input-group .lego-search-input:active,
-.input-group .lego-search-input:focus,
-.input-group .lego-search-input:hover {
-    border-right: none;
-}
-
-.input-group.lego-search .lego-search-input:focus,
-.input-group.lego-search .lego-search-input:focus ~ .input-group-btn .btn {
-    border-color: #66afe9 !important;
-}
-.input-group.lego-search .input-group-btn:not(:first-child)>.btn,
-.input-group.lego-search .input-group-btn:not(:first-child)>.btn-group {
-    margin-left: -2px;
-}
-.lego-search.input-group-sm .input-group-btn > .btn{
-    padding: 3px 6px;
+.lego-search{
+    input,
+    input:focus {
+        height: 36px;
+        padding: 7px 12px;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    .lego-search-button {
+        padding: 7px 12px;
+        border: 1px solid #ddd;
+        background: #fff;
+        border-left: none;
+        border-radius: 4px;
+        i {
+            color: #999;
+        }
+        &:hover i {
+            color: #0275d8;
+        }
+    }
+    .dropdown-toggle {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        max-width: 120px;
+        padding: 7px 10px;
+        border: 1px solid #ddd;
+    }
+    .input-group {
+        .lego-search-input {
+            border-right: none;
+            &:active,
+            &:focus,
+            &:hover {
+                border-right: none;
+            }
+            &:focus,
+            &:focus ~ .input-group-btn .btn {
+                border-color: #66afe9 !important;
+            }
+        }
+        .input-group-btn{
+            width: 1% !important;
+            &:not(:first-child)>.btn,
+            &:not(:first-child)>.btn-group {
+                margin-left: -2px;
+            }
+        }
+    }
+    &.input-group-sm input,
+    &.input-group-sm input:focus {
+        height: auto;
+        padding: .27rem .5rem;
+        font-size: .875rem;
+        border-radius: .2rem;
+    }
+    &.input-group-sm .input-group-btn > .btn{
+        padding: 3px 6px;
+    }
 }
