--- a/src/steps/asset/index.scss
+++ b/src/steps/asset/index.scss
@@ -1,6 +1,6 @@
 .lego-steps {
     font-size: 0;
-    width: 100%;
+    // width: 100%;
     line-height: 1.5;
     .lego-steps-item {
         position: relative;
@@ -341,6 +341,7 @@
         border-radius: 6px 0 0 6px;
         overflow: hidden;
         padding: 1px 0 1px 1px;
+        min-height: 42px;
         .lego-steps-main {
             position: relative;
             vertical-align: middle;
@@ -356,6 +357,7 @@
             }
         }
         .lego-steps-item{
+            height: 40px;
             // margin-right: -4px !important;
             &:first-child .lego-steps-step:before{
                 content: none;
@@ -367,7 +369,7 @@
         .lego-steps-tail{
             height: 100%;
             top: 0;
-            min-height: 36px;
+            min-height: 40px;
             > i{
                 height: 100%;
                 &:after {
@@ -378,14 +380,15 @@
             }
         }
         .lego-steps-step{
-            padding: 8px;
+            // padding: 8px;
+            line-height: 40px;
             &:before {
                 content: '';
                 height: 100%;
                 width: 10px;
                 border-left: 10px solid transparent;
-                border-top: 18px solid #e9e9e9;
-                border-bottom: 18px solid #e9e9e9;
+                border-top: 20px solid #e9e9e9;
+                border-bottom: 20px solid #e9e9e9;
                 position: absolute;
                 top: 0;
                 left: -10px;
@@ -402,8 +405,8 @@
                     height: 100%;
                     border-radius: 0;
                     margin-right: 0px;
-                    border-top: 18px solid transparent !important;
-                    border-bottom: 18px solid transparent !important;
+                    border-top: 20px solid transparent !important;
+                    border-bottom: 20px solid transparent !important;
                     border-left: 10px solid #e9e9e9;
                     border-right: 0;
                     background-color: transparent !important;
@@ -416,15 +419,20 @@
             .lego-steps-title{
                 color: #fff;
             }
+            .lego-steps-tail{
+                >i:after{
+                    background: #29c589;
+                }
+            }
             .lego-steps-step{
                 .lego-steps-head{
                     .lego-steps-head-inner{
-                        border-color: #03a9f4;
+                        border-color: #29c589;
                     }
                 }
                 &:before {
-                    border-top-color: #03a9f4;
-                    border-bottom-color: #03a9f4;
+                    border-top-color: #29c589;
+                    border-bottom-color: #29c589;
                 }
             }
         }
@@ -435,9 +443,9 @@
         &:after{
             content: '';
             width: 12px;
-            border-left: 10px solid transparent;
-            border-top: 18px solid #fff;
-            border-bottom: 18px solid #fff;
+            border-left: 11px solid transparent;
+            border-top: 21px solid #fff;
+            border-bottom: 21px solid #fff;
             position: absolute;
             top: -1px;
             bottom: -1px;
@@ -452,11 +460,18 @@
                     }
                 }
             }
+            &:first-child{
+                .lego-steps-tail{
+                    > i{
+                        border-radius: 6px 0 0 6px;
+                    }
+                }
+            }
         }
         .lego-steps-step{
             &:before {
-                border-top: 18px solid #fff;
-                border-bottom: 18px solid #fff;
+                border-top: 20px solid #fff;
+                border-bottom: 20px solid #fff;
             }
             .lego-steps-head{
                 .lego-steps-head-inner{
@@ -468,7 +483,7 @@
             .lego-steps-step{
                 .lego-steps-head{
                     .lego-steps-head-inner{
-                        border-color: #03a9f4;
+                        border-color: #29c589;
                     }
                 }
             }
