--- a/src/tags/asset/index.scss
+++ b/src/tags/asset/index.scss
@@ -1,5 +1,44 @@
 @import "../../../asset/scss/bootstrap/variables";
 .lego-tags {
+    display: flex;
+    flex-flow: row;
+    .lego-tags-list{
+        position: relative;
+        width: 100%;
+        .lego-tags-close{
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+            height: 26px;
+        }
+        .lego-tags-open{
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: auto;
+            background-color: #fff;
+            padding: 5px;
+            border-radius: 0 0 6px 6px;
+            box-shadow: 0 2px 4px rgba(0,0,0,.1);
+        }
+    }
+    .lego-tags-btns{
+        display: inline-table;
+        min-width: 80px;
+    }
+    .btn-more{
+        cursor: pointer;
+        margin: 5px 8px;
+        &:hover {
+            color: #3399fe;
+            &:before {
+                content: "\E60B" !important;
+            }
+        }
+    }
     .lego-tag {
         display: inline-block;
         line-height: 20px;
