--- a/src/tags/asset/index.scss
+++ b/src/tags/asset/index.scss
@@ -21,7 +21,7 @@
             height: auto;
             background-color: #fff;
             padding: 5px;
-            border-radius: 0 0 6px 6px;
+            // border-radius: 0 0 6px 6px;
             box-shadow: 0 2px 4px rgba(0,0,0,.1);
         }
     }
