--- a/src/switchs/asset/index.scss
+++ b/src/switchs/asset/index.scss
@@ -56,7 +56,7 @@
         &.sm{
         	width: 40px;
         	height: 20px;
-            margin-top: 7px;
+            // margin-top: 7px;
         	border-radius: 10px;
         	line-height: 20px;
             .slider {
@@ -67,5 +67,5 @@
     }
 }
 .form-group > div > .lego-switch .sm{
-    margin-top: 7px;
+    // margin-top: 7px;
 }
