--- a/src/tags/asset/index.scss
+++ b/src/tags/asset/index.scss
@@ -5,9 +5,9 @@
     .lego-tags-list{
         position: relative;
         width: 100%;
-        > div{
-            height: 26px;
-        }
+        // > div{
+        //     height: 26px;
+        // }
         .lego-tags-div{
             overflow: hidden;
             text-overflow: ellipsis;
