--- a/src/modal/asset/index.scss
+++ b/src/modal/asset/index.scss
@@ -11,6 +11,7 @@
     z-index: 1000 !important;
     .modal-dialog {
         z-index: 1000 !important;
+        margin: 0;
         .modal-content {
             border: none;
             box-shadow: 0 2px 10px rgba(0,0,0,.3);
@@ -96,6 +97,7 @@
 .dialog-modal {
     .modal-dialog {
         width: 500px;
+        text-align: left;
     }
 }
 
