--- a/src/pagination/asset/index.scss
+++ b/src/pagination/asset/index.scss
@@ -170,6 +170,7 @@
     border: 1px solid #ddd;
     color:#666;
     font-size: 14px;
+    padding: 5px 10px;
 }
 
 .lego-pagination button .caret {
