--- a/src/modal/asset/index.scss
+++ b/src/modal/asset/index.scss
@@ -11,7 +11,8 @@
     z-index: 1000 !important;
     .modal-dialog {
         z-index: 1000 !important;
-        margin: 0;
+        margin: 0 auto;
+        top: 20%\9\0;
         .modal-content {
             border: none;
             box-shadow: 0 2px 10px rgba(0,0,0,.3);
@@ -98,6 +99,9 @@
     .modal-dialog {
         width: 500px;
         text-align: left;
+        margin: 0 auto;
+        top: 50%\9\0;
+        margin-top: -90px\9\0;
     }
 }
 
