--- a/src/dropdown/asset/index.scss
+++ b/src/dropdown/asset/index.scss
@@ -60,7 +60,7 @@ div.dropdown-menu > ul{
 .dropdown-menu > li > a:focus {
     text-decoration: none;
     color: #262626;
-    background-color: #f5f5f5;
+    background-color: #f4f9fc;
 }
 .dropdown-menu > ul > .active > a,
 .dropdown-menu > ul > .active > a:hover,
@@ -71,7 +71,7 @@ div.dropdown-menu > ul{
     color: #fff;
     text-decoration: none;
     outline: 0;
-    background-color: #3399fe;
+    background-color: #f4f9fc;
 }
 
 .dropdown-menu .disabled > a,
