--- a/src/modal/asset/index.scss
+++ b/src/modal/asset/index.scss
@@ -102,6 +102,9 @@
         margin: 0 auto;
         top: 50%\9\0;
         margin-top: -90px\9\0;
+        .modal-header{
+            border-bottom: none;
+        }
     }
 }
 
