--- a/src/editcom/asset/index.scss
+++ b/src/editcom/asset/index.scss
@@ -16,18 +16,20 @@
     margin-left: 5px;
 }
 .lego-editcom > span{
-	padding-top: .3rem;
+	padding-top: .5rem;
 }
 .lego-editcom.sm > i{
     line-height: 25px;
 	padding-top: .3rem;
 }
 .lego-editcom:hover > i{
+	padding-top: .3rem;
 	display: inline-block;
+	vertical-align: middle;
 }
 .lego-editcom > i.edit{
- //    margin-top: 2px;
-	// zoom: 1.3;
+	padding-top: .5rem;
+	vertical-align: middle;
 	font-size: 20px;
 }
 .lego-editcom > i.edit:hover{
