--- a/src/facial/asset/index.scss
+++ b/src/facial/asset/index.scss
@@ -3,10 +3,14 @@
         font-size: 20px;
         cursor: pointer;
     }
+    .anticon{
+        vertical-align: middle;
+    }
+    .face-remove{
+        margin-left: 5px;
+    }
     .dropdown-menu {
-        width: 376px;
-        height: 160px;
-        padding: 7px;
+        padding: 0px;
         overflow: hidden;
         .lego-facial-item a{
             padding: 0;
@@ -15,18 +19,21 @@
             list-style: none;
             padding: 0;
             margin: 0;
-            width: 100%;
-            height: 100%;
+            width: 429px;
+            height: 175px;
             overflow: hidden;
             background: url(./face_icons/facebackground.png);
             background-size: cover;
             li {
                 float: left;
                 margin: 0;
+                width: 28.5px;
+                height: 28.5px;
                 img {
-                   width: 24px;
-                   height: 24px;
-                   opacity: 0;
+                    width: 98%;
+                    height: auto;
+                    margin-left: 0.2px;
+                    opacity: 0;
                }
                &:hover img {
                    opacity: 1;
