--- a/src/search/asset/index.scss
+++ b/src/search/asset/index.scss
@@ -20,6 +20,12 @@
             color: #0275d8;
         }
     }
+    .dropdown-menu a{
+        color: #76838f;
+        span{
+            color: #37474f !important;
+        }
+    }
     .dropdown-toggle {
         text-overflow: ellipsis;
         overflow: hidden;
@@ -55,7 +61,8 @@
         height: auto;
         padding: 3px 6px;
         font-size: .875rem;
-        border-radius: .2rem;
+        // border-radius: .2rem;
+        height: 28px;
     }
     &.input-group-sm .input-group-btn > .btn{
         padding: 3px 6px;
