--- a/src/transfer/asset/index.scss
+++ b/src/transfer/asset/index.scss
@@ -8,8 +8,8 @@
     .lego-tree{
         padding: 5px 5px 5px 0;
     }
-    i.anticon-double-right,
-    i.anticon-double-left {
+    i.anticon-right,
+    i.anticon-left {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -18,11 +18,11 @@
         color: #999;
     }
 
-    i.anticon-double-right {
+    i.anticon-right {
         margin-top: -10px;
     }
 
-    i.anticon-double-left {
+    i.anticon-left {
         margin-top: 10px;
     }
 
