--- a/src/colorpicker/asset/index.scss
+++ b/src/colorpicker/asset/index.scss
@@ -10,7 +10,7 @@
 		.sp-preview {
 		    width: 28px;
 		    height: 28px;
-		    border: none;
+		    border-color: #ddd;
 			border-radius: 4px;
 			overflow: hidden;
 		}
