--- a/src/upload/asset/index.scss
+++ b/src/upload/asset/index.scss
@@ -8,13 +8,15 @@
        overflow: hidden;
     }
     .lego-upload-container {
-        margin-top: 8px;
+        &:first-child{
+            margin-top: 8px;
+        }
     }
     .lego-addbtn{
         i {
             font-size: 16px;
             display: inline-block;
-            vertical-align: middle;
+            vertical-align: top;
         }
     }
     .lego-cancelbtn {
